# powertorch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  example.py  pyproject.toml
examples/: mnist.py
helper/: helper.py
models/: __init__.py  lenet5.py  perceptron.py  quantized.py
nth/helper/: __init__.py  data.py
nth/models/: perceptron.py
powertorch/: __init__.py
powertorch/io/: io.py
